--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@astrojs/check": "^0.9.4",
+        "@astrojs/mdx": "^4.3.1",
         "@astrojs/preact": "^4.1.0",
         "@fontsource-variable/inter": "^5.2.6",
         "@fontsource-variable/jetbrains-mono": "^5.2.6",
@@ -18,7 +19,9 @@
         "@fontsource/iosevka": "^5.2.5",
         "astro": "^5.12.1",
         "astro-icon": "^1.1.5",
+        "katex": "^0.16.22",
         "preact": "^10.26.9",
+        "remark-math": "^6.0.0",
         "typescript": "^5.8.3"
     },
     "devDependencies": {
