added projects page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "@fontsource-variable/outfit": "^5.2.6",
         "@fontsource-variable/source-code-pro": "^5.2.6",
         "@fontsource/iosevka": "^5.2.5",
+        "@iconify-json/octicon": "^1.2.9",
+        "@iconify-json/simple-icons": "^1.2.44",
+        "@iconify-json/vscode-icons": "^1.2.23",
         "astro": "^5.12.1",
         "astro-icon": "^1.1.5",
         "katex": "^0.16.22",
