--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@fontsource-variable/outfit": "^5.2.6",
         "@fontsource-variable/source-code-pro": "^5.2.6",
         "@fontsource/iosevka": "^5.2.5",
+        "@iconify-json/logos": "^1.2.5",
         "@iconify-json/octicon": "^1.2.9",
         "@iconify-json/simple-icons": "^1.2.44",
         "@iconify-json/vscode-icons": "^1.2.23",
