--- a/.github/workflows/screenshot.yml
+++ b/.github/workflows/screenshot.yml
@@ -29,10 +29,14 @@ jobs:
 
       - name: Install Puppeteer and dependencies
         run: |
-          npm install puppeteer
-          # Install necessary system dependencies for Puppeteer's Chromium
           sudo apt-get update
-          sudo apt-get install -yq gconf-service libasound2 libatk1.0-0 libcairo2 libcups2 libfontconfig1 libgdk-pixbuf2.0-0 libgtk-3-0 libnspr4 libpango-1.0-0 libxss1 libappindicator1 libnss3 lsb-release xdg-utils
+          sudo apt-get install -y \
+            libx11-6 libxcomposite1 libxcursor1 libxdamage1 libxext6 \
+            libxfixes3 libxi6 libxtst6 libnss3 libglib2.0-0 libgtk-3-0t64 \
+            libasound2t64 libxrandr2 libpangocairo-1.0-0 libatk1.0-0 \
+            libatk-bridge2.0-0 libcups2 libdbus-1-3 libdrm2 libgbm1 \
+            libgdk-pixbuf2.0-0
+          npm install puppeteer
 
       - name: Run Puppeteer screenshot script
         # The JavaScript code for taking the screenshot is now embedded directly here.
